--- a/src/Pages/Gallery/Style/page.module.css
+++ b/src/Pages/Gallery/Style/page.module.css
@@ -4,11 +4,9 @@
   z-index: 0;
 }
 
-@media (max-width: 768px)
-{
-    .primary
-    {
-        z-index: 0;
-        top : 25vh;
-    }
+@media (max-width: 768px) {
+  .primary {
+    z-index: 0;
+    top: 25vh;
+  }
 }
