--- a/src/Pages/OurTeam/Style/core&exe.module.css
+++ b/src/Pages/OurTeam/Style/core&exe.module.css
@@ -23,27 +23,61 @@
   .names{
     list-style: none;
   }
-  
-  @media screen and (max-width: 400px){
+
+  .namelist{
+    margin-bottom: 220px;
+    display: grid;
+    grid-template-columns: repeat(3,0.5fr);
+    justify-content: center;
+    gap: 7px;
+    grid-column-gap: 0px;
+    padding: 0 180px;
+  }
+  .names:hover{
+    color:palevioletred;
+    text-decoration: underline;
+  }
+  @media screen and (min-width: 150px) and (max-width:530px){
     .members1{
         margin-bottom: 150px;
     }
     .namebox{
         display:grid;
+        
        grid-template-columns: auto;
        grid-column:auto;
         justify-content: center;
         position: relative;
         top:92px;
         color:white;
-        font-size: 1.5rem;
+        font-size: 0.5rem;
         height: 10vh;
         font-family: 'Roboto';
         margin-bottom: 10px;
         gap:2px;
+        right:-4px;
+        width:min-content;
+        
       }
+      .namelist{
+        grid-template-columns: repeat(2, 1fr); 
+    top: 92px;
+    gap: 28px;
+      }
+      .names{
+        font-size: 1.2rem;
+      }
+      
   }
 
-  .namelist{
-    margin-bottom: 220px;
+  @media screen and (min-width:530px) and (max-width:1035px){
+    .namelist{
+      grid-template-columns: repeat(2, 1fr); 
+      text-align: center;
+      grid-column-gap:5px ;
+  top: 92px;
+  gap: 15px;
+    }
   }
+
+  
